@@ -1,8 +1,8 @@
 --------------------
 Extra: QuickBar
 --------------------
-Version: 0.4.4
-Created: September 18, 2012
+Version: 0.5.0
+Created: December 14, 2012
 Author: JP DeVries <mail@devries.jp>
 License: GNU GPLv2 (or later at your option)
 
@@ -12,3 +12,6 @@ If logged into the Manager, adds an Evo style hover bar to the top of your site 
 Thanks for using QuickBar
 JP DeVries	
 mail@devries.jp
+
+Find QuickBar on GitHub:
+https://github.com/jpdevries/QuickBar/
