@@ -1,74 +1,0 @@
-<?php return array (
-  'unique_key' => 'category',
-  'preserve_keys' => false,
-  'update_object' => true,
-  'related_objects' => 
-  array (
-    'Chunks' => 
-    array (
-      'f0cbc01a0e1396ed798ecba8b3e35883' => 
-      array (
-        'preserve_keys' => false,
-        'update_object' => true,
-        'unique_key' => 'name',
-        'class' => 'modChunk',
-        'object' => '{"id":null,"source":0,"property_preprocess":0,"name":"quickbar","description":"QuickBar markup used with QuickBar Snippet","editor_type":0,"category":0,"cache_type":0,"snippet":"<div class=\\"quickbar-wrapper\\">\\n    <div class=\\"quickbar\\">\\n        <ul>\\n        \\t<li><a href=\\"[[!getMgrURL]]?a=30&id=[[*id]]\\" target=\\"_blank\\">Edit Resource<\\/a><\\/li>\\n\\t\\t\\t<li><a href=\\"[[!getMgrURL]]\\" target=\\"_blank\\">Dashboard<\\/a><\\/li>\\n            <li><a href=\\"[[!createNewLink]]\\" target=\\"_blank\\">Create Here<\\/a><\\/li>\\n\\t\\t\\t[[-<li class=\\"help\\"><a href=\\"[[~1? &service=`logout` &scheme=`full`]]\\" data-href=\\"http:\\/\\/rtfm.modx.com\\/display\\/revolution20\\/An+Overview+of+MODX\\" target=\\"_blank\\">Help<\\/a><\\/li>]]\\n    \\t<\\/ul>\\n    <\\/div>\\n<\\/div>","locked":0,"properties":null,"static":0,"static_file":"","content":"<div class=\\"quickbar-wrapper\\">\\n    <div class=\\"quickbar\\">\\n        <ul>\\n        \\t<li><a href=\\"[[!getMgrURL]]?a=30&id=[[*id]]\\" target=\\"_blank\\">Edit Resource<\\/a><\\/li>\\n\\t\\t\\t<li><a href=\\"[[!getMgrURL]]\\" target=\\"_blank\\">Dashboard<\\/a><\\/li>\\n            <li><a href=\\"[[!createNewLink]]\\" target=\\"_blank\\">Create Here<\\/a><\\/li>\\n\\t\\t\\t[[-<li class=\\"help\\"><a href=\\"[[~1? &service=`logout` &scheme=`full`]]\\" data-href=\\"http:\\/\\/rtfm.modx.com\\/display\\/revolution20\\/An+Overview+of+MODX\\" target=\\"_blank\\">Help<\\/a><\\/li>]]\\n    \\t<\\/ul>\\n    <\\/div>\\n<\\/div>"}',
-        'guid' => 'ad77a7d7d2d34bb15ee29f4889d02872',
-        'native_key' => NULL,
-        'signature' => '1bb20ff828afa623ef8e06d259f30e97',
-      ),
-    ),
-    'Snippets' => 
-    array (
-      'fb3e9b9187d04cf79d001559191a8ef9' => 
-      array (
-        'preserve_keys' => false,
-        'update_object' => true,
-        'unique_key' => 'name',
-        'class' => 'modSnippet',
-        'object' => '{"id":null,"source":0,"property_preprocess":0,"name":"QuickBar","description":"Include this snippet uncached just after your <body>","editor_type":0,"category":0,"cache_type":0,"snippet":"if (!$modx->user->hasSessionContext(\'mgr\') ) return \'\';\\n$modx->regClientCSS($modx->getOption(\'assets_url\') . \'components\\/quickbar\\/style.css\');\\nreturn $modx->getChunk(\'quickbar\');","locked":0,"properties":null,"moduleguid":"","static":0,"static_file":"","content":"if (!$modx->user->hasSessionContext(\'mgr\') ) return \'\';\\n$modx->regClientCSS($modx->getOption(\'assets_url\') . \'components\\/quickbar\\/style.css\');\\nreturn $modx->getChunk(\'quickbar\');"}',
-        'guid' => '45ebd30887b474440e7806764be4a113',
-        'native_key' => NULL,
-        'signature' => '6ee0f094b9e815c06abd8bc2013b76f2',
-      ),
-    ),
-  ),
-  'related_object_attributes' => 
-  array (
-    'Snippets' => 
-    array (
-      'preserve_keys' => false,
-      'update_object' => true,
-      'unique_key' => 'name',
-    ),
-    'Chunks' => 
-    array (
-      'preserve_keys' => false,
-      'update_object' => true,
-      'unique_key' => 'name',
-    ),
-  ),
-  'namespace' => 'quickbar',
-  'resolve' => 
-  array (
-    0 => 
-    array (
-      'type' => 'file',
-      'body' => '{"source":"quickbar-0.5.0-pl\\/modCategory\\/91f0418d9ffc196e3129cd1259775da6\\/0\\/","target":"return MODX_CORE_PATH . \'components\\/\';","name":"quickbar"}',
-    ),
-    1 => 
-    array (
-      'type' => 'file',
-      'body' => '{"source":"quickbar-0.5.0-pl\\/modCategory\\/91f0418d9ffc196e3129cd1259775da6\\/1\\/","target":"return MODX_ASSETS_PATH . \'components\\/\';","name":"quickbar"}',
-    ),
-  ),
-  'validate' => NULL,
-  'vehicle_package' => 'transport',
-  'vehicle_class' => 'xPDOObjectVehicle',
-  'guid' => '223a492b5fce6ab2c498dd3f27f9ce7b',
-  'package' => 'modx',
-  'class' => 'modCategory',
-  'signature' => '91f0418d9ffc196e3129cd1259775da6',
-  'native_key' => 1,
-  'object' => '{"id":1,"parent":0,"category":"QuickBar"}',
-);
