@@ -1,96 +1,0 @@
-.quickbar-wrapper {
-  height: 4px;
-  overflow: visible; }
-
-.quickbar {
-  width: 100%;
-  height: 36px;
-  border-bottom: 4px solid #9ac54f;
-  background: #131313;
-  background: rgba(19, 19, 19, 0.96);
-  position: fixed;
-  top: -36px;
-  left: 0;
-  z-index: 10000;
-  text-align: left;
-  -webkit-transition: all 160ms ease-in;
-  -moz-transition: all 160ms ease-in;
-  -o-transition: all 160ms ease-in;
-  transition: all 160ms ease-in;
-  -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
-  -ms-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
-  -o-box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.5); }
-  .quickbar:hover {
-    top: 0;
-    -webkit-transition: all 240ms ease-in;
-    -moz-transition: all 240ms ease-in;
-    -o-transition: all 240ms ease-in;
-    transition: all 240ms ease-in; }
-  .quickbar ul {
-    margin: 0;
-    color: white;
-    position: absolute;
-    top: 7px;
-    left: 0px;
-    padding: 0 4px;
-    width: 100%;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -o-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box; }
-    .quickbar ul li {
-	  white-space:nowrap;
-      display: inline-block;
-      background-color: #5D8A36;
-      background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #70a641), color-stop(100%, #4b6f2b));
-      background-image: -webkit-linear-gradient(#70a641, #4b6f2b);
-      background-image: -moz-linear-gradient(#70a641, #4b6f2b);
-      background-image: -o-linear-gradient(#70a641, #4b6f2b);
-      background-image: linear-gradient(#70a641, #4b6f2b);
-      text-shadow: #263816 0 1px 0;
-      border-top: 1px solid #8ABF5B;
-      border-bottom: 1px solid black;
-      font-size: 13px;
-      font-weight: bold;
-      -webkit-border-radius: 4px;
-      -moz-border-radius: 4px;
-      -o-border-radius: 4px;
-      -ms-border-radius: 4px;
-      border-radius: 4px;
-      -webkit-box-sizing: border-box;
-      -moz-box-sizing: border-box;
-      -o-box-sizing: border-box;
-      -ms-box-sizing: border-box;
-      box-sizing: border-box;
-      padding: 2px 8px 1px 8px;
-      height: 24px;
-      margin-right: 4px;
-      -webkit-transition: all 240ms ease-out;
-      -moz-transition: all 240ms ease-out;
-      -o-transition: all 240ms ease-out;
-      transition: all 240ms ease-out;
-      opacity: 0.99;
-      /* oh, webkit */
-      cursor: pointer;
-      color: #ecf8e1; }
-      .quickbar ul li:hover {
-        color: white;
-        opacity: 0.86; }
-      .quickbar ul li.help {
-        float: right; }
-      .quickbar ul li a, .quickbar ul li a:visited {
-        color: inherit;
-        text-decoration: none; }
-      .quickbar ul li a {
-        font-family: Helvetica, Arial, sans-serif;
-        letter-spacing: 0; }
-
-.touch .quickbar {
-  top: 0; }
-
-@media only screen and (max-width: 480px) {
-  .quickbar {
-    top: 0; } }
