@@ -9,10 +9,10 @@
   'validate' => NULL,
   'vehicle_package' => 'transport',
   'vehicle_class' => 'xPDOObjectVehicle',
-  'guid' => '04eb1b67371521e0136b6cbea6dc19bb',
+  'guid' => '3b63b077d89f3e4d75800bc9afdfe6c0',
   'package' => 'modx',
   'class' => 'modNamespace',
-  'signature' => '9b66ba80a2a20fba1fcc20485188730a',
+  'signature' => '8cb522ed8b641b39ce2de27c467b5d9c',
   'native_key' => 'quickbar',
   'object' => '{"name":"quickbar","path":"{core_path}components\\/quickbar\\/","assets_path":""}',
 );
